Update : New pages added

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <li><a class="nav-link active" href="#header">Home</a></li>
             <li><a class="nav-link" href="#about">About</a></li>
             <li><a class="nav-link" href="#resume">Resume</a></li>
+            <li><a class="nav-link" href="#skills">Skills</a></li>
             <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
             <li><a class="nav-link" href="#contact">Contact</a></li>
           </ul>
@@ -68,7 +69,7 @@
       </div>
       <div class="d-none d-lg-block col-lg-6 d-flex">
         <a href="index.html" class="m-lg-auto ">
-          <img src="assets/img/mypic1_black.png" alt="" class="headerimg img-fluid" style="margin-left: 50px;">
+          <img src="assets/img/mypic1_black.png" alt="" class="headerimg img-fluid" style="margin-left: 50px;" id="mypic-link">
         </a>
       </div>
     </div>
@@ -82,7 +83,7 @@
       </div>
       <div class="row">
         <div class="col-lg-4 d-flex align-items-center justify-content-center" data-aos="fade-right">
-          <img src="assets/img/mypic1_wb.png" class="img-fluid w-75" alt="">
+          <img src="assets/img/Developer.png" class="img-fluid w-75" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>MERN Stack Developer</h3>
@@ -111,61 +112,65 @@
         </div>
       </div>
     </div>
+  </section>
 
+  <section id="skills" class="skills">
     <div class="skills container">
       <div class="section-title">
           <h2>Skills</h2>
       </div>
       <div class="row">
           <div class="col-12">
-              <h5 class="text-light mt-3">Frontend Development</h5>
+              <h5 class="text-light mt-3">Languages</h5>
               <ul class="list-inline">
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">HTML5</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">(S)CSS</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Bootstrap</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Tailwind CSS</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">JavaScript</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">TypeScript</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">React</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Redux</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Zustand</li>
+                <li class="list-inline-item text-light p-2 rounded shadow-sm">JavaScript</li>
+                <li class="list-inline-item text-light p-2 rounded shadow-sm">TypeScript</li>
+                <li class="list-inline-item text-light p-2 rounded shadow-sm">MongoDB</li>
+                <li class="list-inline-item text-light p-2 rounded shadow-sm">C</li>
+                <li class="list-inline-item text-light p-2 rounded shadow-sm">PostgreSQL</li>
+                <li class="list-inline-item text-light p-2 rounded shadow-sm">HTML5</li>
+                <li class="list-inline-item text-light p-2 rounded shadow-sm">(S)CSS</li>
               </ul>
-  
-              <h5 class="text-light mt-3">Backend Development</h5>
+
+              <h5 class="text-light mt-3">Libraries & Frameworks</h5>
               <ul class="list-inline">
                   <li class="list-inline-item text-light p-2 rounded shadow-sm">Node.js</li>
                   <li class="list-inline-item text-light p-2 rounded shadow-sm">Express</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">MongoDB</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">PostgreSQL</li>
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm">React</li>
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Tailwind</li>
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Bootstrap</li>
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm">MUI</li>
               </ul>
   
+              <h5 class="text-light mt-3">Tools & Platforms</h5>
+              <ul class="list-inline">
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Git</li>
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Postman</li>
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Jest</li>
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Render</li>
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm">AWS</li>
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Firebase</li>
+              </ul>
+  
+              <h5 class="text-light mt-3">Design & Prototyping</h5>
+              <ul class="list-inline">
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Figma</li>
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Code Planner</li>
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Photoshop</li>
+              </ul>
+              
               <h5 class="text-light mt-3">State Management & Architecture</h5>
               <ul class="list-inline">
                   <li class="list-inline-item text-light p-2 rounded shadow-sm">Context API</li>
                   <li class="list-inline-item text-light p-2 rounded shadow-sm">Redux</li>
                   <li class="list-inline-item text-light p-2 rounded shadow-sm">Zustand</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">MVC Architecture</li>
               </ul>
   
-              <h5 class="text-light mt-3">Testing & Tools</h5>
+              <h5 class="text-light mt-3">Concepts & Models</h5>
               <ul class="list-inline">
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Jest</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Postman</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Git</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Code Planner</li>
-              </ul>
-  
-              <h5 class="text-light mt-3">Cloud & Deployment</h5>
-              <ul class="list-inline">
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">AWS EC2</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Firebase</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Render</li>
-              </ul>
-  
-              <h5 class="text-light mt-3">Design & UI/UX</h5>
-              <ul class="list-inline">
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Figma</li>
-                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Photoshop</li>
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm">MVC Architechture</li>
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm">Waterfall Model</li>
+                  <li class="list-inline-item text-light p-2 rounded shadow-sm">SOLID Principles</li>
               </ul>
   
               <h5 class="text-light mt-3">Currently Pursuing</h5>
@@ -268,6 +273,9 @@
             <li data-filter=".filter-mern">MERN</li>
             <li data-filter=".filter-react">React</li>
             <li data-filter=".filter-ejs">Node & Ejs</li>
+            <li data-filter=".filter-designs">Designs</li>
+            <li data-filter=".filter-figma">Figma</li>
+            <li data-filter=".filter-cp">Code Planner</li>
             <li data-filter=".filter-frontend">Frontend</li>
             <li data-filter=".filter-backend">Backend</li>
             <li data-filter=".filter-static">Static</li>
@@ -348,6 +356,19 @@
               <p>Fanpage</p>
               <div class="portfolio-links">
                 <a href="valorant.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-ejs filter-backend filter-frontend">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/FigmaLapshop.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>LAPSHOP PROTOTYPE</h4>
+              <p>Figma design</p>
+              <div class="portfolio-links">
+                <a href="lapshopFigma.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
                   class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
