Updated : New pages added

--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
             <li data-filter=".filter-mern">MERN</li>
             <li data-filter=".filter-react">React</li>
             <li data-filter=".filter-ejs">Node & Ejs</li>
+            <li data-filter=".filter-dev">In Development</li>
             <li data-filter=".filter-designs">Designs</li>
             <li data-filter=".filter-figma">Figma</li>
             <li data-filter=".filter-cp">Code Planner</li>
@@ -283,14 +284,53 @@
         </div>
       </div>
       <div class="row portfolio-container">
-        <div class="col-lg-4 col-md-6 portfolio-item filter-react filter-frontend">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-cp filter-designs filter-dev">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/codePlannerSlotflow.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>SLOTFLOW CODE PLANNER</h4>
+              <p>Database design</p>
+              <div class="portfolio-links">
+                <a href="codePlannerSlotflow.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-figma filter-designs filter-dev">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/figmaSlotflow.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>SLOTFLOW FIGMA DESIGN</h4>
+              <p>Figma Design</p>
+              <div class="portfolio-links">
+                <a href="figmaSlotflow.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-react filter-frontend filter-dev">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/NetflixRcgpt.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>NETFLIX</h4>
+              <h4>NETFLIX CLONE</h4>
               <p>Clone</p>
               <div class="portfolio-links">
                 <a href="netflixReact.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-react filter-frontend filter-dev">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Youtuberc.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>YOUTUBE CLONE</h4>
+              <p>Clone</p>
+              <div class="portfolio-links">
+                <a href="youtuberc.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
                   class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -317,6 +357,19 @@
               <p>Food order app</p>
               <div class="portfolio-links">
                 <a href="craveroute.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-mern filter-react filter-backend filter-frontend filter-dev">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Talkzy.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>TALKZY</h4>
+              <p>Real time chat web app</p>
+              <div class="portfolio-links">
+                <a href="talkzy.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
                   class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -361,14 +414,14 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 portfolio-item filter-ejs filter-backend filter-frontend">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-figma filter-designs">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/FigmaLapshop.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>LAPSHOP PROTOTYPE</h4>
+              <h4>LAPSHOP FIGMA DESIGN</h4>
               <p>Figma design</p>
               <div class="portfolio-links">
-                <a href="lapshopFigma.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                <a href="figmaLapshop.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
                   class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
